--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -3,129 +3,177 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.CartFragment">
 
 
-<!--    <androidx.appcompat.widget.AppCompatTextView-->
-<!--        android:layout_width="40dp"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:layout_marginLeft="15dp"-->
-<!--        android:layout_marginTop="15dp"-->
-<!--        android:background="@drawable/ic_baseline_arrow_back_ios_24" />-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/cart_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/checkout_layout"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="16dp" />
 
-<!--    <com.denzcoskun.imageslider.ImageSlider-->
-<!--        android:id="@+id/image_slider"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="290dp"-->
-<!--        app:iss_auto_cycle="true"-->
-<!--        app:iss_corner_radius="50"-->
-<!--        app:iss_delay="0"-->
-<!--        app:iss_period="1000" />-->
+    <RelativeLayout
+        android:id="@+id/checkout_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/edit_box">
 
-<!--    <androidx.cardview.widget.CardView-->
-<!--        android:elevation="4dp"-->
-<!--        android:layout_width="50dp"-->
-<!--        android:layout_height="50dp"-->
-<!--        android:layout_marginBottom="50dp"-->
-<!--        android:layout_below="@id/image_slider"-->
-<!--        android:layout_alignParentEnd="true"-->
-<!--        android:layout_marginEnd="50dp"-->
-<!--        app:cardCornerRadius="50dp">-->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/price_detail_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/poppins_medium"
+            android:text="Price Details"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-<!--        <androidx.appcompat.widget.AppCompatImageView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:padding="8dp"-->
-<!--            android:src="@drawable/ic_favorite" />-->
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/first_flower_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/price_detail_txt"
+            android:orientation="horizontal">
 
-<!--    </androidx.cardview.widget.CardView>-->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="@string/red_rose"
+                android:textSize="16sp" />
 
-<!--    <androidx.appcompat.widget.LinearLayoutCompat-->
-<!--        android:id="@+id/bottom_layout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_below="@id/image_slider"-->
-<!--        android:background="@drawable/cart_edit_bg"-->
-<!--        android:orientation="vertical">-->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="@font/poppins_medium"
+                android:gravity="end"
+                android:text="1 x ₹576.00"
+                android:textSize="15dp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/second_flower_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/first_flower_detail"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="@string/angle_flower_bouquet"
+                android:textSize="15sp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:fontFamily="@font/poppins_medium"
+                android:gravity="end"
+                android:text="1 x ₹576.00"
+                android:textSize="15sp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-<!--        <androidx.appcompat.widget.AppCompatTextView-->
-<!--            android:id="@+id/flower_name"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginLeft="24dp"-->
-<!--            android:layout_marginTop="34dp"-->
-<!--            android:text="Jannien Flower Bouquet"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="22sp" />-->
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/delivery_charge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/second_flower_detail"
+            android:layout_marginTop="10dp"
 
-<!--        <androidx.appcompat.widget.AppCompatTextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@id/flower_name"-->
-<!--            android:layout_marginLeft="25dp"-->
-<!--            android:text="Includes: Jannien Flower,Lily leaves"-->
-<!--            android:textColor="@color/white" />-->
+            android:orientation="horizontal">
 
-<!--        <androidx.appcompat.widget.AppCompatTextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_below="@id/flower_name"-->
-<!--            android:layout_marginLeft="25dp"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:text="₹567.00"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="30dp" />-->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Delivery Charges"
+                android:textSize="15sp" />
 
-<!--        <View-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="1dp"-->
-<!--            android:layout_marginLeft="20dp"-->
-<!--            android:layout_marginTop="15dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            android:background="@color/white" />-->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:fontFamily="@font/poppins_medium"
+                android:gravity="end"
+                android:text="₹50.00"
+                android:textSize="15sp" />
 
-<!--        <androidx.appcompat.widget.AppCompatTextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-<!--            android:layout_marginLeft="25dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:text="About"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="25dp" />-->
+        <View
+            android:id="@+id/divider_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/delivery_charge"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:background="#CDCDCD" />
 
-<!--        <androidx.appcompat.widget.AppCompatTextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/total_amount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/divider_line"
 
-<!--            android:layout_marginLeft="25dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:text="Lorem lpsum is simple dummy text of the printing and typesetting industry. Lorem lpsum has been the industry's standard dummy text ever since the 1500s."-->
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
-<!--            android:textColor="@color/white" />-->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Total Amount Payable"
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content">-->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:fontFamily="@font/poppins_medium"
+                android:gravity="end"
+                android:text="₹1000.00"
+                android:textColor="@color/green_500"
+                android:textSize="15sp" />
 
-<!--            <androidx.appcompat.widget.AppCompatButton-->
-<!--                android:id="@+id/add_to_cart_btn"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="80dp"-->
-<!--                android:layout_marginLeft="20dp"-->
-<!--                android:layout_marginTop="25dp"-->
-<!--                android:layout_marginRight="20dp"-->
-<!--                android:layout_marginBottom="5dp"-->
-<!--                android:background="@drawable/edit_box"-->
-<!--                android:text="@string/add_to_cart">-->
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-<!--            </androidx.appcompat.widget.AppCompatButton>-->
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/total_amount"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginBottom="12dp"
+            android:background="@color/green_700"
+            android:fontFamily="@font/poppins_medium"
+            android:text="@string/checkout"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
-<!--        </RelativeLayout>-->
-
-<!--    </androidx.appcompat.widget.LinearLayoutCompat>-->
+    </RelativeLayout>
 
 </RelativeLayout>
