--- a/app/src/main/res/layout/fragment_flower_detail.xml
+++ b/app/src/main/res/layout/fragment_flower_detail.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="15dp"
         android:id="@+id/back_icon"
         android:layout_marginTop="15dp"
-        android:background="@drawable/ic_baseline_arrow_back_ios_24" />
+        android:background="@drawable/ic_arrow" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/flower_image"
