--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,13 +24,17 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:padding="5dp"
-                    android:layout_alignParentStart="true"
-                    android:src="@drawable/ic_arrow"
+                    android:id="@+id/profile_back"
                     android:layout_width="40dp"
-                    android:layout_height="40dp"/>
+                    android:layout_height="40dp"
+                    android:layout_alignParentStart="true"
+                    android:padding="5dp"
+                    android:src="@drawable/ic_baseline_arrow_back_ios_24" />
+
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/profile_cart"
                     android:layout_width="45dp"
                     android:layout_height="45dp"
                     android:layout_alignParentEnd="true"
@@ -42,12 +46,16 @@
                     android:src="@drawable/ic_shopping" />
 
                 <androidx.appcompat.widget.AppCompatImageView
-                    android:layout_margin="5dp"
-                    android:padding="1dp"
-                    android:layout_alignParentEnd="true"
-                    android:src="@drawable/ic_notification"
+                    android:id="@+id/profile_notification"
                     android:layout_width="45dp"
-                    android:layout_height="45dp"/>
+                    android:layout_height="45dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:padding="1dp"
+                    android:src="@drawable/ic_notification" />
 
             </RelativeLayout>
 
@@ -60,7 +68,7 @@
                 android:text="My Profile"
                 android:textStyle="normal"
                 android:textColor="@color/white"
-                android:textSize="28sp"
+                android:textSize="25sp"
                 android:layout_marginStart="15dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -76,13 +84,14 @@
     <RelativeLayout
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:layout_height="260dp">
+        android:layout_marginTop="60dp"
+        android:layout_height="230dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:layout_marginTop="36dp"
-            app:cardCornerRadius="15dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="30dp"
+            app:cardCornerRadius="12dp"
             app:cardElevation="10dp"
             app:cardUseCompatPadding="true"
             card_view:cardCornerRAdius="5dp">
@@ -94,29 +103,21 @@
                 android:orientation="vertical">
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/profile_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:gravity="center"
-                    android:text="Naman Kumar"
+                    android:text="N K "
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center"
-                    android:text="namankumar246727@gmail.com"
-                    android:textColor="#5C5A5A"
-                    android:textSize="14sp"
-                    android:textStyle="normal" />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="5dp"
                     android:background="#79D6D1D1" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
@@ -137,7 +138,7 @@
                         android:textStyle="bold" />
 
                     <View
-                        android:layout_width="1dp"
+                        android:layout_width="2dp"
                         android:layout_height="match_parent"
                         android:background="#79D6D1D1" />
 
@@ -146,13 +147,13 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Family"
-                        android:textColor="#636262"
+                        android:text="Orders"
+                        android:textColor="@color/black"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
                     <View
-                        android:layout_width="1dp"
+                        android:layout_width="2dp"
                         android:layout_height="match_parent"
                         android:background="#79D6D1D1" />
 
@@ -161,8 +162,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="Vitals"
-                        android:textColor="#636262"
+                        android:text=" --------- "
+                        android:textColor="@color/black"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -175,14 +176,22 @@
 
         </androidx.cardview.widget.CardView>
 
-        <com.google.android.material.imageview.ShapeableImageView
-
-            android:layout_width="78dp"
-            android:layout_height="98dp"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
+            android:background="@drawable/my_image"
             android:elevation="15dp"
-            android:padding="5dp"
-            android:src="@drawable/my_image" />
+            android:padding="5dp" />
+
+<!--        <com.google.android.material.imageview.ShapeableImageView-->
+
+<!--            android:layout_width="78dp"-->
+<!--            android:layout_height="98dp"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:elevation="15dp"-->
+<!--            android:padding="5dp"-->
+<!--            android:src="@drawable/my_image" />-->
 
 
     </RelativeLayout>
@@ -190,127 +199,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:orientation="vertical"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <androidx.cardview.widget.CardView
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:card_view="http://schemas.android.com/tools"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="10dp"
-            app:cardUseCompatPadding="true"
-            card_view:cardCornerRAdius="5dp">
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:orientation="vertical"
-                android:padding="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:orientation="horizontal"
-                        android:padding="1dp"
-                        android:gravity="center"
-                        android:layout_alignParentStart="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:padding="5dp"
-                            android:src="@drawable/ic_person"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"/>
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:text="Address"
-                            android:textSize="16sp"
-                            android:layout_margin="5dp"
-                            android:textStyle="bold|normal"
-                            android:textColor="#F8554A4A"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:orientation="horizontal"
-                        android:padding="1dp"
-                        android:gravity="center"
-                        android:layout_alignParentEnd="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:padding="5dp"
-                            android:src="@drawable/ic_baseline_add_24"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"/>
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:text="Add Information"
-                            android:textSize="16sp"
-                            android:layout_margin="5dp"
-                            android:textStyle="bold|normal"
-                            android:textColor="#286DC2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-                </RelativeLayout>
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <androidx.appcompat.widget.AppCompatImageView
-                        app:tint="@color/black"
-                        android:padding="2dp"
-                        android:layout_marginStart="10dp"
-                        android:src="@drawable/ic_baseline_home_24"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"/>
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:text="Noorpur Bijnor (U.P)"
-                            android:textSize="17sp"
-                            android:textColor="@color/black"
-                            android:textStyle="bold"
-                            android:gravity="center"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <androidx.appcompat.widget.AppCompatTextView
-                            android:text="Vill. Roshanpur jagir \nPo. Hashupura\nNoorpur (Bijnor) \n246727"
-                            android:textSize="14sp"
-                            android:textColor="#ED5E5E5E"
-                            android:textStyle="normal"
-                            android:textAlignment="textStart"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            card_view:ignore="RtlCompat" />
-
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+    </ScrollView>
 
 
 
-                </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-
-            </androidx.appcompat.widget.LinearLayoutCompat>
-
-        </androidx.cardview.widget.CardView>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     <androidx.cardview.widget.CardView
@@ -320,7 +215,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:card_view="http://schemas.android.com/tools"
         app:cardCornerRadius="15dp"
-        app:cardElevation="10dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         app:cardUseCompatPadding="true"
         card_view:cardCornerRAdius="5dp">
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -351,6 +248,7 @@
 
             </androidx.appcompat.widget.LinearLayoutCompat>
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/profile_phone"
                 android:text="+91 9548140812"
                 android:textStyle="bold"
                 android:textColor="@color/black"
@@ -365,6 +263,66 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.cardview.widget.CardView>
+
+
+
+    <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:card_view="http://schemas.android.com/tools"
+        app:cardCornerRadius="15dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        app:cardUseCompatPadding="true"
+        card_view:cardCornerRAdius="5dp">
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:orientation="horizontal"
+                android:padding="3dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:padding="2dp"
+                    android:src="@drawable/ic_baseline_email_24"
+                    android:layout_marginStart="5dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:text="@string/email_address"
+                    android:layout_marginStart="10dp"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    android:textColor="#605E5E"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/profile_email"
+                android:text="nk@gmail.com"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginStart="25dp"
+                android:layout_marginBottom="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.cardview.widget.CardView>
+
+
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
